Random fixes
Signed-off-by: Leonidas Avdelas <avdelasleonidas@gmail.com>