@@ -21,19 +21,22 @@ import gr.iccs.smart.mobility.util.EmptyJsonResponse;
 import jakarta.validation.Valid;
 
 @RestController
-@RequestMapping("/api/people")
+@RequestMapping("/api/users")
 public class UserController {
     private static final Logger log = LoggerFactory.getLogger(UserController.class);
 
-    @Autowired
-    private UserService userService;
+    private final UserService userService;
+
+    UserController(UserService userService) {
+        this.userService = userService;
+    }
 
     @GetMapping
     public List<UserDTO> getAll() {
         log.debug("User API: Get All");
         return userService.getAll()
                 .stream().map(UserDTO::fromUser)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping(value = "/{username}")
@@ -42,11 +45,11 @@ public class UserController {
         return UserDTO.fromUser(userService.getById(username));
     }
 
-    @ResponseStatus(HttpStatus.CREATED)
     @PostMapping
-    public User create(@Valid @RequestBody User user) {
-        log.debug("User API: Create {}", user);
-        return userService.create(user);
+    @ResponseStatus(HttpStatus.CREATED)
+    public User create(@Valid @RequestBody UserDAO user) {
+        log.info("Creating user {}", user);
+        return userService.create(user.toUser());
     }
 
     @PostMapping("{username}/ride")
